feat: update api dokumentasi dan memperbaiki stuktur auth dengan dto
